Refactor MiltiLabelInformation builder