@@ -19,15 +19,12 @@
  */
 package org.neo4j.gds.similarity.filtering;
 
-import com.carrotsearch.hppc.IntObjectHashMap;
-import com.carrotsearch.hppc.IntObjectMap;
 import org.junit.jupiter.api.Test;
 import org.neo4j.gds.NodeLabel;
 import org.neo4j.gds.core.huge.DirectIdMap;
 import org.neo4j.gds.core.loading.ArrayIdMapBuilder;
 import org.neo4j.gds.core.loading.LabelInformationBuilders;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -41,11 +38,7 @@ class NodeFilterTest {
         var labelOne = NodeLabel.of("one");
         var labelTwo = NodeLabel.of("two");
 
-        IntObjectMap<List<NodeLabel>> labelTokenNodeLabelMappings = new IntObjectHashMap<List<NodeLabel>>();
-        labelTokenNodeLabelMappings.put(1, Collections.singletonList(labelOne));
-        labelTokenNodeLabelMappings.put(2, Collections.singletonList(labelTwo));
-
-        var labelInformationBuilder = LabelInformationBuilders.multiLabelWithCapacityAndLabelInformation(4, labelTokenNodeLabelMappings);
+        var labelInformationBuilder = LabelInformationBuilders.multiLabelWithCapacityAndLabelInformation(4, List.of(labelOne, labelTwo), List.of());
         labelInformationBuilder.addNodeIdToLabel(labelOne, 0);
         labelInformationBuilder.addNodeIdToLabel(labelTwo, 1);
         labelInformationBuilder.addNodeIdToLabel(labelOne, 2);
